Fix background image transitions not working on Firefox

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
   align-items: center;
   
   transition: background-image 0.65s ease-in-out;
+  -moz-transition: background-image 0.65s ease-in-out;
 
   user-select: none;
   -moz-user-select: none;
